# GPUtils

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main.cu
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ci/: README.md  script.sh
example/: CMakeLists.txt  README.md  main.cu
example/src/: README.md  data.cuh
include/: CMakeLists.txt  device.cuh  device_vector.cuh  gputils.cuh  tensor.cuh
python/: README.md  VERSION  setup.py
python/gputils_api/: __init__.py  gputils_api.py
python/test/: test.py
test/: CMakeLists.txt  testDevice.cu  testGputils.cu  testTensor.cu
